--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
   "name": "react-ui-breakpoints",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Easily add media breakpoints to your react project",
   "private": false,
   "author": "Nathan Martin",
   "license": "MIT",
   "repository": "https://github.com/nmartin42/react-ui-breakpoints.git",
-  "main": "dist/index.js",
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-responsive": "^9.0.0-beta.10",
-    "react-scripts": "5.0.1",
-    "rollup": "^2.75.6",
-    "rollup-plugin-typescript2": "^0.32.1",
-    "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "react-responsive": "^9.0.2"
   },
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
@@ -41,5 +28,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/react": "^18.0.27",
+    "rollup": "^3.15.0",
+    "typescript": "^4.9.5"
   }
 }
