--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,16 @@
     "compilerOptions": {
       "outDir": "dist",
       "module": "esnext",
-      "target": "es5",
-      "lib": ["es6", "dom", "es2016", "es2017"],
+      "target": "esnext",
       "sourceMap": true,
       "allowJs": false,
-      "jsx": "react",
       "declaration": true,
-      "moduleResolution": "node",
+      "moduleResolution": "nodenext",
       "forceConsistentCasingInFileNames": true,
       "noImplicitReturns": true,
       "noImplicitThis": true,
       "noImplicitAny": true,
       "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true
     },
