--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "react-ui-breakpoints",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Easily add media breakpoints to your react project",
   "private": false,
   "author": "Nathan Martin",
   "license": "MIT",
   "repository": "https://github.com/nmartin42/react-ui-breakpoints.git",
   "type": "module",
-  "dependencies": {
-    "react-responsive": "^9.0.2"
-  },
+  "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w"
